# agentops-labs-onboarding-portal

./: .env.example  .gitignore  README.md  db_agentops.json  firebase-applet-config.json  firebase-blueprint.json  firestore.rules  index.html  metadata.json  package-lock.json  package.json  pyproject.toml  requirements.txt  storage.rules  supabase-config.json  supabase_schema.sql  vercel.json  vite.config.ts
api/: index.ts
backend/: firebase_sync.ts  firestore_sync.py  main.py  server.ts  supabase_sync.py  supabase_sync.ts
frontend/: App.tsx  index.css  types.ts
frontend/components/: AdminAttendance.tsx  AdminDashboard.tsx  AdminDocuments.tsx  AdminEmployeeManagement.tsx  AdminReports.tsx  AdminTasks.tsx  AdminTestAssignment.tsx  AdminTests.tsx  ApplicationForm.tsx  AssessmentModule.tsx  DashboardLayout.tsx  DocumentAnnotationOverlay.tsx  DocumentPreviewModal.tsx  EmployeeAssignedTests.tsx  EmployeeAttendance.tsx  EmployeeDashboard.tsx  EmployeeProfile.tsx  EmployeeTasks.tsx  Login.tsx  Logo.tsx  MessageCenter.tsx  PasswordResetPage.tsx  SimulatedEmailClient.tsx  ThemeContext.tsx
frontend/lib/: downloadHelper.ts  firebaseStorage.ts  supabaseStorage.ts
